tests/compile-errors/ce-inline-argument.valk

fn test(x: [u8 x 2]) {
}
fn main() {
}
